fix: search results z-index, quute for peers

--- a/frontend/src/sass/components/navbar.scss
+++ b/frontend/src/sass/components/navbar.scss
@@ -18,6 +18,7 @@
 }
 
 .searchResults {
+  z-index: 2;
   position: absolute;
   top: 100%; /* Position the results below the searchBar */
   width: 100%;
